Added way of logging out of the extension.

--- a/src/options.html
+++ b/src/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- TODO: Add meta utf-8 tag -->
+    <meta charset="utf-8" />
     <title>Options for Reader extension</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/options.css" />
@@ -17,12 +17,13 @@
         <div class="section" id="user">
           <div id="logged-in" class="hidden">
             <p>You are logged in!</p>
+            <p><a href="#logout" id="logout">Logout</a></p>
           </div>
 
           <div id="logged-out">
             <ul class="tabs">
-              <li class="tab-active"><a href="#" id="tab-login">Login</a></li>
-              <li><a href="#" id="tab-signup">Signup</a></li>
+              <li class="tab-active"><a href="#" id="tab-signup">Signup</a></li>
+              <li><a href="#" id="tab-login">Login</a></li>
             </ul>
 
             <div class="forms signup active">
@@ -48,7 +49,7 @@
           </div>
         </div>
 
-        <div class="section" id="download">
+        <div class="section hidden" id="download">
           <h2>Download your data</h2>
           <a href="">Download as CSV</a>.
         </div>
