Now possible to change status of the article.

--- a/src/popup.html
+++ b/src/popup.html
@@ -21,7 +21,8 @@
         <div id="open-for"></div>
       </section>
       <section>
-        <button id="ignore">Ignore page</button>
+        <button class="change_status" id="ignore">Ignore page</button>
+        <button class="change_status" id="track">Track page</button>
       </section>
     </div>
   </body>
