--- a/src/background.html
+++ b/src/background.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title></title>
-  <script src="js/jquery-1.8.0.min.js"></script>
+  <script src="ext/jquery-1.9.1.min.js"></script>
   <script src="js/reader.js"></script>
   <script src="js/background.js"></script>
 </head>
