--- a/src/options.html
+++ b/src/options.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <script src="js/jquery-1.8.0.min.js"></script>
+    <script src="ext/jquery-1.9.1.min.js"></script>
     <script src="js/reader.js"></script>
     <script src="js/options.js"></script>
   </body>
